fix alignment zone label

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,12 @@
 }
 
 html {
-	height:  100%;
+	height: 100%;
 }
 
 body {
-	background-color:  rgba(16, 64, 13, 1);
-	height:  100%;
-	overflow: hidden;
+	background-color: rgba(16, 64, 13, 1);
+	height: 100%;
 }
 
 .bg-cover {
